logo flages changes done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       <!-- Uncomment the line below if you also wish to use an image logo -->
 
       <a href="index.html" class="logo d-flex justify-content='flex-start' me-auto">
-        <img id="white-logo" src="assets/img/whitelogo.png" alt="White Logo" width="110" height="160" />
         <img id="black-logo" src="assets/img/blacklogo.png" alt="Black Logo" width="110" height="160" />
       </a>
       <!-- <h1 class="sitename">AdaInn Technologies</h1> -->
@@ -1435,7 +1434,7 @@
   <!-- <script src="https://shubham.jnanic.com/custom-bot/JnanicChatbotJs.js"
     instance_id="214022ca-fc6c-459e-a1a0-ea2dc77168f0" x-api-key="37927acc-ed7c-4a5e-80f3-c00e2d80838b"></script> -->
 
-  <script>
+  <!-- <script>
     const header = document.getElementById('header');
     const whiteLogo = document.getElementById('white-logo');
     const blackLogo = document.getElementById('black-logo');
@@ -1454,7 +1453,7 @@
         blackLogo.style.display = 'block';
       }
     });
-  </script>
+  </script> -->
 
   <!-- form js -->
   <script>
