--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1149,7 +1149,7 @@
           </div>
 
           <div class="col-lg-6">
-            <!-- <form action="https://formspree.io/f/xanbkqkj" method="POST" class="contact-form-wrapper" -->
+          
             <form action="https://formspree.io/f/xjkelkqk" method="POST" class="contact-form-wrapper"
               onsubmit="return validateForm()">
               <div class="row gy-4">
