--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- Uncomment the line below if you also wish to use an image logo -->
 
       <a href="index.html" class="logo d-flex justify-content='flex-start' me-auto">
-        <img id="black-logo" src="assets/img/blacklogo.png" alt="Black Logo" width="110" height="160" />
+        <img id="black-logo" src="assets/img/adainnlogo1.png" alt="Black Logo" width="110" height="160" />
       </a>
       <!-- <h1 class="sitename">AdaInn Technologies</h1> -->
 
@@ -1482,9 +1482,6 @@
       if (form) form.reset();
     });
 
-
   </script>
-
 </body>
-
 </html>
