new logo upgrade

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- Uncomment the line below if you also wish to use an image logo -->
 
       <a href="index.html" class="logo d-flex justify-content='flex-start' me-auto">
-        <img id="black-logo" src="assets/img/adainnlogo1.png" alt="Black Logo" width="110" height="160" />
+        <img id="black-logo" src="assets/img/adainnlogo.png" alt="Black Logo" width="110" height="160" />
       </a>
       <!-- <h1 class="sitename">AdaInn Technologies</h1> -->
 
